Fixed issue with Git, SVN and dirs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Build folder
-build/*
-!build/README.md
-
-# Git folder
-git/*
-!git/README.md
-
-# Subversion folder
-svn/*
-!svn/README.md
-
-# ZIP folder
-zip/*
-!zip/README.md
-
-
+# Composer
 /vendor/
+
+# Deploy
+/deploy/
