--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     },
     "bin": [
-        "bin/pronamic-deployer"
+        "bin/wp-deployer"
     ],
     "require": {
         "league/climate": "^3.3",
