--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "league/uri": "^5.3"
     },
     "require-dev": {
-        "pronamic/wp-coding-standards": "^1.3"
+        "pronamic/wp-coding-standards": "^1.3",
+        "yoast/phpunit-polyfills": "^1.0"
     },
     "config": {
         "allow-plugins": {
