--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,10 @@
         "bin/wp-deployer"
     ],
     "require": {
-        "league/climate": "^3.3",
-        "symfony/yaml": "^4.0",
         "deployer/deployer": "^6.2",
         "symfony/filesystem": "^4.2",
         "symfony/console": "^4.0",
-        "symfony/process": "^4.0",
-        "mustangostang/spyc": "^0.6.2",
-        "league/uri": "^5.3"
+        "symfony/process": "^4.0"
     },
     "require-dev": {
         "pronamic/wp-coding-standards": "^1.3",
