--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,17 @@
         "bin/wp-deployer"
     ],
     "require": {
-        "deployer/deployer": "^6.2",
-        "symfony/filesystem": "^4.2",
-        "symfony/console": "^4.0",
-        "symfony/process": "^4.0"
+        "php": ">=8.0",
+        "symfony/filesystem": "^6.2",
+        "symfony/console": "^6.2",
+        "symfony/process": "^6.2"
     },
     "require-dev": {
         "pronamic/wp-coding-standards": "^1.3",
         "yoast/phpunit-polyfills": "^1.0"
     },
     "config": {
+        "sort-packages": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
