--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -4,6 +4,7 @@
 	<file>.</file>
 
 	<exclude-pattern type="relative">^deploy/*</exclude-pattern>
+	<exclude-pattern type="relative">*/vendor/*</exclude-pattern>
 
 	<rule ref="PronamicWP">
 
