--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -7,6 +7,7 @@
 	<exclude-pattern type="relative">*/vendor/*</exclude-pattern>
 
 	<rule ref="PronamicWP">
-
+		<exclude name="WordPressVIPMinimum.Performance.FetchingRemoteData.FileGetContentsUnknown" />
+		<exclude name="WordPressVIPMinimum.Functions.RestrictedFunctions.file_ops_file_put_contents" />
 	</rule>
 </ruleset>
