--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     ],
     "require": {
         "php": ">=8.0",
-        "symfony/console": "^6.0 || ^6.1 || ^6.2",
-        "symfony/filesystem": "^6.0 || ^6.1 || ^6.2",
-        "symfony/process": "^6.0 || ^6.1 || ^6.2"
+        "symfony/console": "^5.0 || ^6.0 || ^6.1 || ^6.2",
+        "symfony/filesystem": "^5.0 || ^6.0 || ^6.1 || ^6.2",
+        "symfony/process": "^5.0 || ^6.0 || ^6.1 || ^6.2"
     },
     "require-dev": {
         "pronamic/wp-coding-standards": "^1.3",
